allprojects {
    group = 'co.cubestudio'
    version = '1.2'

    repositories {
        mavenCentral()
        maven {
            url = uri('https://jogamp.org/deployment/maven')
        }
    }
}

def vitralPublishableProjects = [
    ':base',
    ':awt',
    ':jogl2',
    ':jogl4'
]

tasks.register('verifyJavaUtf8') {
    group = 'verification'
    description = 'Validates that all Java sources (except android) are UTF-8 encoded.'

    // Optional allow-list (relative project paths) for legacy non-UTF8 files.
    // Configure with:
    //   -PverifyJavaUtf8Allowed="path/a.java|path/b.java"
    def utf8AllowedFromProperty =
        (project.findProperty('verifyJavaUtf8Allowed') ?: '')
            .toString()
            .split('\\|')
            .findAll { !it.isBlank() }
    def utf8AllowedFiles = utf8AllowedFromProperty
        .collect { rootProject.layout.projectDirectory.file(it).asFile.canonicalFile }
        .toSet()

    def javaSourcesToValidate = rootProject.fileTree(rootProject.projectDir) {
        include '**/*.java'
        exclude 'android/**'
        exclude '**/build/**'
        exclude '.gradle/**'
        exclude '.gradle-home/**'
    }

    inputs.files(javaSourcesToValidate)
    inputs.property('verifyJavaUtf8Allowed', utf8AllowedFromProperty.join('|'))

    doLast {
        def invalid = []
        def decoder = java.nio.charset.StandardCharsets.UTF_8
            .newDecoder()
            .onMalformedInput(java.nio.charset.CodingErrorAction.REPORT)
            .onUnmappableCharacter(java.nio.charset.CodingErrorAction.REPORT)

        javaSourcesToValidate.files.each { sourceFile ->
            if (utf8AllowedFiles.contains(sourceFile.canonicalFile)) {
                return
            }
            try {
                decoder.reset()
                decoder.decode(java.nio.ByteBuffer.wrap(sourceFile.bytes))
            }
            catch (java.nio.charset.CharacterCodingException ignored) {
                invalid << sourceFile
            }
        }

        if (!invalid.isEmpty()) {
            def files = invalid.collect { it.path }.join('\n - ')
            throw new GradleException("Non UTF-8 Java sources detected:\n - ${files}")
        }
    }
}

subprojects { subproject ->
    if (subproject.path == ':testsuite' || !subproject.buildFile.exists()) {
        return
    }

    apply plugin: 'java-library'

    if (vitralPublishableProjects.contains(subproject.path)) {
        apply plugin: 'maven-publish'
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release = 17
        options.compilerArgs += ['-Xlint:deprecation']
    }

    tasks.named('check') {
        dependsOn rootProject.tasks.named('verifyJavaUtf8')
    }

    def legacyExternalProjects = [
        ':testsuite:ApplicationCases:SciVisApplication',
        ':testsuite:_APITests:_WiiRemoteJHelloWorld'
    ]
    def skipLegacy = legacyExternalProjects.contains(subproject.path) && !rootProject.hasProperty('enableLegacyApis')

    def mainSrcDirs = []
    def testSrcDirs = []

    if (file('src/main').exists()) {
        mainSrcDirs = ['src/main']
        if (file('src/test').exists()) {
            testSrcDirs = ['src/test']
        }
    }
    else if (file('src').exists()) {
        mainSrcDirs = ['src']
    }
    else {
        mainSrcDirs = []
    }

    if (skipLegacy) {
        mainSrcDirs = []
        testSrcDirs = []
        logger.lifecycle("Skipping legacy external API project ${subproject.path}. Use -PenableLegacyApis to enable it.")
    }

    sourceSets {
        main {
            java {
                setSrcDirs(mainSrcDirs)
                exclude 'build/**'
                exclude 'target/**'
                exclude '.gradle/**'
                exclude 'classes/**'
                exclude 'doc/**'
            }
            resources.setSrcDirs([])
        }
        test {
            java.setSrcDirs(testSrcDirs)
            resources.setSrcDirs([])
        }
    }

    if (vitralPublishableProjects.contains(subproject.path)) {
        publishing {
            publications {
                mavenJava(MavenPublication) {
                    from components.java
                    artifactId = subproject.name
                }
            }
        }
    }

    tasks.register('runMain', JavaExec) {
        group = 'application'
        description = 'Runs a module main class. Use -PrunMainClass=<fqcn> and optional -PrunJvmArgs=<a|b>.'
        dependsOn tasks.named('classes')
        classpath = sourceSets.main.runtimeClasspath
        standardInput = System.in
        mainClass.set(providers.gradleProperty('runMainClass').orElse(''))

        def rawJvmArgs = project.findProperty('runJvmArgs')?.toString()
        if (rawJvmArgs) {
            def parsedJvmArgs = rawJvmArgs.split('\\|').findAll { !it.isBlank() }
            if (!parsedJvmArgs.isEmpty()) {
                jvmArgs(parsedJvmArgs)
            }
        }

        doFirst {
            if (mainClass.get().isBlank()) {
                throw new GradleException("Missing -PrunMainClass for ${project.path}:runMain")
            }
        }
    }
}

tasks.register('publishToMavenLocal') {
    group = 'publishing'
    description = 'Publishes the Vitral library modules to the local Maven repository (~/.m2).'
    dependsOn vitralPublishableProjects.collect {
        project(it).tasks.named('publishToMavenLocal')
    }
}


project(':testsuite:ApplicationCases:CommandServer') {
    dependencies {
        implementation project(':base')
    }
}

project(':testsuite:ApplicationCases:SearchEngineFor3DModels') {
    dependencies {
        compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
    }
}

project(':testsuite:_APITests:_JOGL2HelloWorld') {
    dependencies {
        implementation 'org.jogamp.jogl:jogl-all:2.5.0'
        implementation 'org.jogamp.gluegen:gluegen-rt:2.5.0'
        runtimeOnly 'org.jogamp.jogl:jogl-all-main:2.5.0'
        runtimeOnly 'org.jogamp.gluegen:gluegen-rt-main:2.5.0'
    }
}

project(':testsuite:_APITests:_JOGL4HelloWorld') {
    dependencies {
        implementation 'org.jogamp.jogl:jogl-all:2.5.0'
        implementation 'org.jogamp.gluegen:gluegen-rt:2.5.0'
        runtimeOnly 'org.jogamp.jogl:jogl-all-main:2.5.0'
        runtimeOnly 'org.jogamp.gluegen:gluegen-rt-main:2.5.0'
    }
}

project(':testsuite:_APITests:_JOGL4PbufferExample') {
    dependencies {
        implementation 'org.jogamp.jogl:jogl-all:2.5.0'
        implementation 'org.jogamp.gluegen:gluegen-rt:2.5.0'
        runtimeOnly 'org.jogamp.jogl:jogl-all-main:2.5.0'
        runtimeOnly 'org.jogamp.gluegen:gluegen-rt-main:2.5.0'
    }
}

configure(subprojects.findAll {
    it.path.startsWith(':testsuite:') &&
    it.buildFile.exists() &&
    it.path != ':testsuite:ApplicationCases:CommandServer'
}) {
    dependencies {
        implementation project(':base')
        implementation project(':awt')
    }
}

configure(subprojects.findAll {
    it.path.startsWith(':testsuite:Jogl4Examples:') &&
    it.buildFile.exists()
}) {
    dependencies {
        implementation project(':jogl4')
        implementation 'org.jogamp.jogl:jogl-all:2.5.0'
        implementation 'org.jogamp.gluegen:gluegen-rt:2.5.0'
        runtimeOnly 'org.jogamp.jogl:jogl-all-main:2.5.0'
        runtimeOnly 'org.jogamp.gluegen:gluegen-rt-main:2.5.0'
    }
}

configure(subprojects.findAll {
    it.path.startsWith(':testsuite:') &&
    it.buildFile.exists() &&
    it.path != ':testsuite:ApplicationCases:CommandServer' &&
    it.path != ':testsuite:_APITests:_JOGL2HelloWorld' &&
    it.path != ':testsuite:_APITests:_JOGL4HelloWorld' &&
    it.path != ':testsuite:_APITests:_JOGL4PbufferExample' &&
    !it.path.startsWith(':testsuite:VSDKExamples:') &&
    !it.path.startsWith(':testsuite:Jogl4Examples:')
}) {
    dependencies {
        implementation project(':jogl2')
        implementation 'org.jogamp.jogl:jogl-all:2.5.0'
        implementation 'org.jogamp.gluegen:gluegen-rt:2.5.0'
        runtimeOnly 'org.jogamp.jogl:jogl-all-main:2.5.0'
        runtimeOnly 'org.jogamp.gluegen:gluegen-rt-main:2.5.0'
    }
}
